--- a/index.html
+++ b/index.html
@@ -16,29 +16,166 @@
   <body>
     <!-- Page-->
     <div class="page text-center">
+        <section class="section-34 bg-default-2 text-left">
+            <div class="shell-fluid">
+                <img class="img-responsive" src="./assets/images/Logo_odc_white.png" width="60" height="60" alt=""/>
+              <h2 class="text-white">Deine Einstellungen
+                <hr id="divider-top" class="divider bg-default-1">
+              </h2>
+            </div>
+          </section>
       <!-- Page Content-->
-      <main class="page-content section-98 section-sm-110">
+      <main class="page-content section-41" style="height: 80vh;">
         <!-- Member BoxesMember Boxes Type 1-->
         <section>
-          <div class="shell">
-            <h1>Member Boxes Type 1</h1>
-            <hr class="divider bg-mantis">
-            <div class="range range-xs-center offset-top-66">
-              <div class="cell-sm-8 cell-lg-12">
-                <div class="range justify-content-center">
-                  <div class="cell-sm-6 cell-lg-3 offset-top-66 offset-sm-top-0"><img class="img-circle img-responsive center-block" src="./assets/images/alina-sample-user.jpg" width="140" height="140" alt=""/>
-                    <div class="offset-top-24">
-                      <h5 class="text-bold">Anika Muster</h5>
-                    </div>
-                    <p class="offset-top-4 small text-bold text-malibu">Support Operator</p>
-                    <hr class="divider"/>
-                    <ul class="list-inline list-inline-xs">
-                      <li><a class="icon fa fa-facebook icon-xs icon-circle icon-darker-filled" href="#"></a></li>
-                      <li><a class="icon fa fa-twitter icon-xs icon-circle icon-darker-filled" href="#"></a></li>
-                    </ul>
+          <div class="">
+            <div class="range range-xs-center">
+              <div class="cell-sm-4 cell-lg-4">
+                  <img class="img-circle img-responsive center-block" src="./assets/images/alina-sample-user.jpg" width="140" height="140" alt=""/>
+                  <div class="offset-top-24">
+                    <h4 class="text-bold">Anika Muster</h4>
                   </div>
-                </div>
+                  <p class="offset-top-4 small text-bold text-dafault-1">Support Operator</p>
+                  <div class="offset-top-24">
+                    <h4 class="text-bold">
+                        <span>
+                            <i class="fa fa-briefcase">
+                            </i>
+                        </span> ODC</h4>
+                        <button class="btn btn-ellipse btn-default">Ausloggen</button>
+                  </div>
+                  <div class="range range-xs-center">
+                    </div>
               </div>
+              <div class="cell-sm-8 cell-lg-8">
+                <div class="responsive-tabs responsive-tabs-classic shell" data-type="horizontal">
+            <ul class="resp-tabs-list tabs-1 text-center tabs-group-default" data-group="tabs-group-default">
+              <li>Datei</li>
+              <li>Interface</li>
+              <li>Retourne & Stonierung</li>
+            </ul>
+            <div class="resp-tabs-container text-left tabs-group-default" data-group="tabs-group-default">
+              <div>
+                <form>
+                    <div class="range">
+                      <div class="cell-lg-6">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="name">Name</label>
+                          <input class="form-control" value="ODC" id="name" type="text" name="name">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="email">Email</label>
+                          <input class="form-control" id="email" type="email" name="email">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="sourceSystem">Source system</label>
+                          <input class="form-control" value="testcase_shopify@test.de" id="sourceSystem" type="text" name="sourceSystem">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="targetSystem">Target system</label>
+                          <input class="form-control" id="targetSystem" type="text" name="targetSystem">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="dhlID">DHL Billing ID</label>
+                          <input class="form-control" id="dhlID" type="text" name="dhlID">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="hermesID">Hermes Billing ID</label>
+                          <input class="form-control" id="hermesID" type="text" name="hermesID">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="range range-xs-center range-lg-left offset-top-30">
+                      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+                          <div class="inset-xs-right-0 inset-lg-right-20">
+                            <label class="checkbox-inline">
+                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Active
+                              </label>
+                          </div>
+                          <br>
+                        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
+                          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+              </div>
+              <div>
+                <form>
+                    <div class="range">
+                      <div class="cell-lg-6">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="username">Username</label>
+                          <input class="form-control" value="12" id="username" type="text" name="username">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="password">Password</label>
+                          <input class="form-control" id="password" type="text" name="password">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                            <label class="form-label form-label-outside" for="apiType">API Type</label>
+                            <input class="form-control" value="REST" id="apiType" type="text" name="apiType">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                            <label class="form-label form-label-outside" for="url">URL</label>
+                            <input class="form-control" value="xxx.myshopify.com/admin" id="url" type="text" name="url">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="goID">Goods owner ID</label>
+                          <input class="form-control" value="100" id="goID" type="text" name="goID">
+                        </div>
+                      </div>
+                      <div class="cell-lg-6 offset-top-20">
+                        <div class="form-group">
+                          <label class="form-label form-label-outside" for="goName">Goods owner name</label>
+                          <input class="form-control" value="ola" id="goName" type="text" name="goName">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="range range-xs-center range-lg-left offset-top-30">
+                      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+                          <div class="inset-xs-right-0 inset-lg-right-20">
+                            <label class="checkbox-inline">
+                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Skip HTTP authorization
+                              </label>
+                          </div>
+                          <div class="inset-xs-right-0 inset-lg-right-20">
+                            <label class="checkbox-inline">
+                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Deactivate auto article update
+                              </label>
+                          </div>
+                          <br>
+                        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
+                          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+              </div>
+              <div>
+                <p>Nowadays, almost everyone has a website. Basically, this is a business card that you present every visitor or partner with. So, the better it is designed the more likely you can expect your further cooperation. The content on your website is important as well.</p>
+              </div>
+            </div>
+          </div>
+                </div>
             </div>
           </div>
         </section>
