--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="wide wow-animation scrollTo smoothscroll" lang="en">
   <head>
     <!-- Site Title-->
-    <title>The New Form</title>
+    <title>ondemandcommerce – Full-Service Fulfillment- und Retourenlösung für E-Commerce Marken und Händler.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -122,7 +122,7 @@
                       <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
                         <div class="form-group">
                           <label class="form-label form-label-outside" for="password">Password</label>
-                          <input class="form-control" id="password" type="text" name="password">
+                          <input class="form-control" value="12" id="password" type="text" name="password">
                         </div>
                       </div>
                       <div class="cell-lg-6 offset-top-20">
