--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <!-- Page-->
     <div class="page text-center">
         <section class="section-34 bg-default-2 text-left">
-            <div class="shell-fluid">
+            <div class="shell-wide">
                 <img class="img-responsive" src="./assets/images/Logo_odc_white.png" width="60" height="60" alt=""/>
-              <h2 class="text-white">Deine Einstellungen
-                <hr id="divider-top" class="divider bg-default-1">
+              <h2 class="text-white">Deine <span class="yourMark">Einstellungen</span> 
               </h2>
             </div>
           </section>
