--- a/index.html
+++ b/index.html
@@ -55,119 +55,145 @@
             </ul>
             <div class="resp-tabs-container text-left tabs-group-default" data-group="tabs-group-default">
               <div>
-                <form>
-                    <div class="range">
-                      <div class="cell-lg-6">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="name">Name</label>
-                          <input class="form-control" value="ODC" id="name" type="text" name="name">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="email">Email</label>
-                          <input class="form-control" id="email" type="email" name="email">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="sourceSystem">Source system</label>
-                          <input class="form-control" value="testcase_shopify@test.de" id="sourceSystem" type="text" name="sourceSystem">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="targetSystem">Target system</label>
-                          <input class="form-control" id="targetSystem" type="text" name="targetSystem">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="dhlID">DHL Billing ID</label>
-                          <input class="form-control" id="dhlID" type="text" name="dhlID">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="hermesID">Hermes Billing ID</label>
-                          <input class="form-control" id="hermesID" type="text" name="hermesID">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="range range-xs-center range-lg-left offset-top-30">
-                      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
-                          <div class="inset-xs-right-0 inset-lg-right-20">
-                            <label class="checkbox-inline">
-                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Active
-                              </label>
-                          </div>
-                          <br>
-                        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
-                          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
+                  <div class="card">
+<form>
+    <div class="range">
+      <div class="cell-lg-6">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="name">Name</label>
+          <input class="form-control" value="ODC" id="name" type="text" name="name">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="email">Email</label>
+          <input class="form-control" id="email" type="email" name="email">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="sourceSystem">Source system</label>
+          <input class="form-control" value="testcase_shopify@test.de" id="sourceSystem" type="text" name="sourceSystem">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="targetSystem">Target system</label>
+          <input class="form-control" id="targetSystem" type="text" name="targetSystem">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="dhlID">DHL Billing ID</label>
+          <input class="form-control" id="dhlID" type="text" name="dhlID">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="hermesID">Hermes Billing ID</label>
+          <input class="form-control" id="hermesID" type="text" name="hermesID">
+        </div>
+      </div>
+    </div>
+    <div class="range range-xs-center range-lg-left offset-top-30">
+      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+          <div class="inset-xs-right-0 inset-lg-right-20">
+            <label class="checkbox-inline">
+                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Active
+              </label>
+          </div>
+          <br>
+        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
+          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
+        </div>
+      </div>
+    </div>
+  </form>
+                  </div>
               </div>
               <div>
-                <form>
-                    <div class="range">
-                      <div class="cell-lg-6">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="username">Username</label>
-                          <input class="form-control" value="12" id="username" type="text" name="username">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="password">Password</label>
-                          <input class="form-control" value="12" id="password" type="text" name="password">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                            <label class="form-label form-label-outside" for="apiType">API Type</label>
-                            <input class="form-control" value="REST" id="apiType" type="text" name="apiType">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                            <label class="form-label form-label-outside" for="url">URL</label>
-                            <input class="form-control" value="xxx.myshopify.com/admin" id="url" type="text" name="url">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="goID">Goods owner ID</label>
-                          <input class="form-control" value="100" id="goID" type="text" name="goID">
-                        </div>
-                      </div>
-                      <div class="cell-lg-6 offset-top-20">
-                        <div class="form-group">
-                          <label class="form-label form-label-outside" for="goName">Goods owner name</label>
-                          <input class="form-control" value="ola" id="goName" type="text" name="goName">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="range range-xs-center range-lg-left offset-top-30">
-                      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
-                          <div class="inset-xs-right-0 inset-lg-right-20">
-                            <label class="checkbox-inline">
-                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Skip HTTP authorization
-                              </label>
-                          </div>
-                          <div class="inset-xs-right-0 inset-lg-right-20">
-                            <label class="checkbox-inline">
-                                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Deactivate auto article update
-                              </label>
-                          </div>
-                          <br>
-                        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
-                          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
+                  <div class="card">
+<form>
+    <div class="range">
+      <div class="cell-lg-6">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="username">Username</label>
+          <input class="form-control" value="12" id="username" type="text" name="username">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="password">Password</label>
+          <input class="form-control" value="12" id="password" type="text" name="password">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+            <label class="form-label form-label-outside" for="apiType">API Type</label>
+            <input class="form-control" value="REST" id="apiType" type="text" name="apiType">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+            <label class="form-label form-label-outside" for="url">URL</label>
+            <input class="form-control" value="xxx.myshopify.com/admin" id="url" type="text" name="url">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="goID">Goods owner ID</label>
+          <input class="form-control" value="100" id="goID" type="text" name="goID">
+        </div>
+      </div>
+      <div class="cell-lg-6 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="goName">Goods owner name</label>
+          <input class="form-control" value="ola" id="goName" type="text" name="goName">
+        </div>
+      </div>
+      <div class="cell-lg-4 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="dwID">Default warehouse ID</label>
+          <input class="form-control" value="121212" id="dwID" type="text" name="dwID">
+        </div>
+      </div>
+      <div class="cell-lg-4 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="goName">Goods owner name</label>
+          <select class="form-control select-filter" data-placeholder="" data-minimum-results-for-search="Infinity">
+              <option>GTIN13</option>
+              <option>GTIN14</option>
+              <option>GTIN15</option>
+          </select>
+        </div>
+      </div>
+      <div class="cell-lg-4 offset-top-20">
+        <div class="form-group">
+          <label class="form-label form-label-outside" for="goName">Goods owner name</label> <br>
+          <input class="form-control" type="text" value="" data-role="tagsinput" placeholder="  " />
+        </div>
+      </div>
+    </div>
+    <div class="range range-xs-center range-lg-left offset-top-30">
+      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+          <div class="inset-xs-right-0 inset-lg-right-20">
+            <label class="checkbox-inline">
+                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Skip HTTP authorization
+              </label>
+          </div>
+          <div class="inset-xs-right-0 inset-lg-right-20">
+            <label class="checkbox-inline">
+                <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Deactivate auto article update
+              </label>
+          </div>
+          <br>
+        <div class="inset-left-50 inset-right-50 inset-xs-left-0 inset-xs-right-0">
+          <button class="btn btn-ellipse btn-default" type="submit">Speichern</button>
+        </div>
+      </div>
+    </div>
+  </form>
+                  </div>
               </div>
               <div>
                 <p>Nowadays, almost everyone has a website. Basically, this is a business card that you present every visitor or partner with. So, the better it is designed the more likely you can expect your further cooperation. The content on your website is important as well.</p>
@@ -183,5 +209,6 @@
     <!-- JavaScript-->
     <script src="./assets/js/core.min.js"></script>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script-custom.js"></script>
   </body>
 </html>
