--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- Page-->
     <div class="page text-center">
+        <!-- HEADER -->
         <section class="section-34 bg-default-2 text-left">
             <div class="shell-wide">
                         <img class="img-responsive" src="./assets/images/Logo_odc_white.png" width="60" height="60" alt=""/>
@@ -23,12 +24,12 @@
                         </h2>
             </div>
           </section>
-      <!-- Page Content-->
       <main class="page-content section-41" style="height: 80vh;">
         <!-- Member BoxesMember Boxes Type 1-->
         <section>
           <div class="">
             <div class="range range-xs-center">
+                <!-- PROFILE -->
               <div class="cell-sm-4 cell-lg-4">
                   <img class="img-circle img-responsive center-block" src="./assets/images/alina-sample-user.jpg" width="140" height="140" alt=""/>
                   <div class="offset-top-24">
@@ -55,7 +56,9 @@
             </ul>
             <div class="resp-tabs-container text-left tabs-group-default" data-group="tabs-group-default">
               <div>
+                  <!-- DATEI TABS -->
                   <div class="card">
+
 <form>
     <div class="range">
       <div class="cell-lg-6">
@@ -112,6 +115,7 @@
                   </div>
               </div>
               <div>
+                  <!-- INTERFACE TABS -->
                   <div class="card">
 <form>
     <div class="range">
@@ -196,6 +200,7 @@
                   </div>
               </div>
               <div>
+                  <!-- RETOURNE AND STORNIERUNG -->
                 <div class="card">
                     <form>
                         <div class="range">
