--- a/index.html
+++ b/index.html
@@ -218,7 +218,17 @@
                             </div>
                           </div>
                           <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
-                           
+                           <div class="form-group">
+                            <label class="form-label form-label-outside" for="name">Retourn conditions</label>
+                            <div class="optionBox-condition">
+                                <div class="block-conditions">
+                                    <a id="add-return-condition" class="btn btn-ellipse btn-default2">
+                                        <i class="fa fa-plus">
+                                        </i>
+                                    </a>
+                                  </div>
+                              </div>
+                        </div>
                           </div>
                           <div class="cell-lg-6 offset-top-20">
                             
