--- a/index.html
+++ b/index.html
@@ -231,7 +231,14 @@
                         </div>
                           </div>
                           <div class="cell-lg-6 offset-top-20">
-                            
+                            <iv class="form-group">
+                                <label class="form-label form-label-outside" for="name">Retourne warehouse</label>
+                                <select class="form-control select-filter" data-placeholder="" data-minimum-results-for-search="Infinity">
+                                    <option>Bitte wählen Sie eine Lage aus</option>
+                                    <option>Lager 1</option>
+                                    <option>Lager 2</option>
+                                </select>
+                              </div>
                           </div>
                           <div class="cell-lg-6 offset-top-20">
                             
