--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                   </div>
                             </div>
                           </div>
-                          <div class="cell-lg-6">
+                          <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Übergabe der Stornierung an ODC</label>
                                 <div class="optionBox-cancelDelivery">
