--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <section class="section-34 bg-default-2 text-left">
             <div class="shell-wide">
                         <img class="img-responsive" src="./assets/images/Logo_odc_white.png" width="60" height="60" alt=""/>
-                        <h2 class="text-white">Deine <span class="yourMark">Einstellungen</span> 
+                        <small class="text-white">
+                          
+                                                  </small>
+                        <h2 class="text-white offset-top-20">
+                          <span class="small text-white">
+                            Einfache Verarbeitung von Rücksendungen
+                          </span> <br>
+                          Deine <span class="yourMark">Einstellungen</span> 
                         </h2>
             </div>
           </section>
@@ -30,7 +37,7 @@
           <div class="">
             <div class="range range-xs-center">
                 <!-- PROFILE -->
-              <div class="cell-sm-4 cell-lg-4">
+              <div class="cell-sm-4 cell-lg-3">
                   <img class="img-circle img-responsive center-block" src="./assets/images/alina-sample-user.jpg" width="140" height="140" alt=""/>
                   <div class="offset-top-24">
                     <h4 class="text-bold">Anika Muster</h4>
@@ -47,7 +54,7 @@
                   <div class="range range-xs-center">
                     </div>
               </div>
-              <div class="cell-sm-8 cell-lg-8">
+              <div class="cell-sm-8 cell-lg-9">
                 <div class="responsive-tabs responsive-tabs-classic shell" data-type="horizontal">
             <ul class="resp-tabs-list tabs-1 text-center tabs-group-default" data-group="tabs-group-default">
               <li>Datei</li>
