--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </div>
     <div class="range range-xs-center range-lg-left offset-top-30">
-      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+      <div class="cell-xs-12 cell-sm-12 cell-lg-12 text-sm-right text-xxs-center">
           <div class="inset-xs-right-0 inset-lg-right-20">
             <label class="checkbox-inline">
                 <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Active
@@ -183,7 +183,7 @@
       </div>
     </div>
     <div class="range range-xs-center range-lg-left offset-top-30">
-      <div class="cell-xs-5 cell-sm-4 cell-lg-12 text-right">
+      <div class="cell-xs-12 cell-sm-12 cell-lg-12 text-sm-right text-xs-center">
           <div class="inset-xs-right-0 inset-lg-right-20">
             <label class="checkbox-inline">
                 <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Skip HTTP authorization
@@ -212,7 +212,7 @@
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Retourn reasons</label>
                                 <div class="optionBox-reason">
-                                    <div class="block-reason">
+                                    <div class="block-reason section-xs-34 section-sm-0">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="reason">
                                             <i class="fa fa-plus">
                                             </i>
@@ -224,7 +224,7 @@
                           <div class="cell-lg-6 offset-top-20 offset-lg-top-0">
                            <div class="form-group">
                             <label class="form-label form-label-outside" for="name">Retourn conditions</label>
-                            <div class="optionBox-condition">
+                            <div class="optionBox-condition section-xs-34 section-sm-0">
                                 <div class="block-condition">
                                     <a id="" class="add btn btn-ellipse btn-default2" data-type="condition">
                                         <i class="fa fa-plus">
@@ -246,7 +246,7 @@
                           <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Übergabe des Auftrags an ODC</label>
-                                <div class="optionBox-job">
+                                <div class="optionBox-job section-xs-34 section-sm-0">
                                     <div class="block-job">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="job">
                                             <i class="fa fa-plus">
@@ -259,7 +259,7 @@
                           <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Importierter Auftrag ist nicht valid</label>
-                                <div class="optionBox-notValid">
+                                <div class="optionBox-notValid section-xs-34 section-sm-0">
                                     <div class="block-notValid">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="notValid">
                                             <i class="fa fa-plus">
@@ -272,7 +272,7 @@
                           <div class="cell-lg-6 offset-top-20 ">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Importierter Auftrag ist valid und wird voon ODC bearbeitet</label>
-                                <div class="optionBox-valid">
+                                <div class="optionBox-valid section-xs-34 section-sm-0">
                                     <div class="block-valid section-bottom-20">
                                         <div class="range">
                                             <div class="cell-lg-10">
@@ -305,7 +305,7 @@
                           <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Auftrag versendet</label>
-                                <div class="optionBox-sent">
+                                <div class="optionBox-sent section-xs-34 section-sm-0">
                                     <div class="block-sent">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="sent">
                                             <i class="fa fa-plus">
@@ -318,7 +318,7 @@
                           <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Übergabe der Stornierung an ODC</label>
-                                <div class="optionBox-cancelDelivery">
+                                <div class="optionBox-cancelDelivery section-xs-34 section-sm-0">
                                     <div class="block-cancelDelivery">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="cancelDelivery">
                                             <i class="fa fa-plus">
@@ -331,7 +331,7 @@
                           <div class="cell-lg-6 offset-top-20">
                             <div class="form-group">
                                 <label class="form-label form-label-outside" for="name">Stornierung von ODC bearbeitet</label>
-                                <div class="optionBox-cancelProcessing">
+                                <div class="optionBox-cancelProcessing section-xs-34 section-sm-0">
                                     <div class="block-cancelProcessing">
                                         <a id="" class="add btn btn-ellipse btn-default2" data-type="cancelProcessing">
                                             <i class="fa fa-plus">
@@ -347,7 +347,7 @@
                             <div class="cell-lg-6 offset-top-20">
                                 <div class="form-group">
                                     <label class="form-label form-label-outside" for="name">Shipment mapping</label>
-                                    <div class="optionBox-mapping">
+                                    <div class="optionBox-mapping section-xs-34 section-sm-0">
                                         <div class="block-mapping section-bottom-20">
                                             <div class="range">
                                                 <div class="cell-lg-6 cell-xs-12">
@@ -370,7 +370,7 @@
                                       </div>
                                 </div>
                               </div>
-                              <div class="cell-xs-12 cell-sm-4 cell-lg-6 text-right offset-top-20 section-top-41">
+                              <div class="cell-xs-12 cell-sm-6 cell-lg-6 text-sm-right text-xxs-center offset-top-20 section-top-41">
                                 <div class="inset-xs-right-0 inset-lg-right-20">
                                   <label class="checkbox-inline">
                                       <input class="checkbox-custom" name="input-group-radio" value="" type="checkbox">Retourenlabel immen in Paket belegen
